[백승종] 상단 화면 구성

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -44,7 +44,7 @@ body {
 /* Layout */
 .main_wrap{position:relative;height:100%;min-width:1024px;background:#f2f3f6;overflow:hidden;} /* min-width:1280px */
 .main_header{margin:0px;}
-.main_container{position:absolute; left:0; right:0;top:44px; bottom:0;}
+.main_container{position:absolute; left:0; right:0;top:88px; bottom:0;}
 /* .btn_aside{position:absolute;left:10px;top:8px;width:26px;height:26px;padding:2px;margin:0;;font-size:0;line-height:0;text-indent:-9999px;overflow:hidden;background:url(/cm/images/inc/bg_btn_side_slide.png) 50% 50% no-repeat}
 .btn_aside:hover {background:url(/cm/images/inc/bg_btn_side_slide.png) 50% 50% no-repeat #7f848c;border-radius:15px;} */
 /* .main_container .btn_aside{position:absolute;left:214px;top:50%;width:10px;height:80px;margin-top:-40px;text-indent:-9999px; background:url("/cm/images/inc/bg_btn_toggle.gif") no-repeat; display:block; overflow:hidden;}*/
@@ -237,8 +237,15 @@ body {
 }
 
 /* Header */
-.head_box{position:relative; height:44px; background:#324258}
-.head_box a.logo{display:block;position:absolute;left:48px;top:5px;width:162px;height:28px}
+.head_top{position:relative; height:44px; background:#ffffff}
+.head_top a.logo{display:block;position:absolute;left:48px;top:5px;width:162px;height:28px}
+
+.sysbtnbox{position:absolute;top:12px;right:19px;height:20px;}
+.sysbtnbox .bis{display:inline-block;width:88px;height:23px;padding:0;margin:0;border:0;color:#fff;line-height:23px;background:#3879d9;border-radius:13px;-moz-border-radius:13px;vertical-align:middle}
+.sysbtnbox .bms{display:inline-block;width:88px;height:23px;padding:0;margin:0 0 0 5px;border:0;color:#fff;line-height:23px;background:#3879d9;border-radius:13px;-moz-border-radius:13px;vertical-align:middle}
+
+
+.head_box{position:relative; height:44px; background:#003d7c}
 
 .head_box .nav{position:absolute;top:0;left:213px;right:0;height:40px;background:none;font-size:13px;}
 .head_box .nav > li{position:relative; display: inline-block;}
@@ -262,6 +269,9 @@ body {
 .head_box .nav > li .submenu > li > .depth3 > li > a{display: block; overflow: hidden; text-overflow:ellipsis; padding:3px;}
 .head_box .nav > li .submenu > li > .depth3 > li > a:hover{background:#f7f8fb}
 
+.sysbox{display:block;position:absolute;left:48px;top:5px;width:162px;height:28px}
+.sysbox .info_tit{display:inline-block;padding:4px 5px 4px 0;margin:0;color:#9ea1a4;font-size:20px;line-height:15px;vertical-align:middle}
+.sysbox .info_tit.system_tit{color:#ff8000;padding-right:5px;}
 
 .infobox{z-index:200;position:absolute;right:60px;top:12px;padding:0 20px 0 0;margin:0}/* right:191px */
 .infobox:before{content:'';position:absolute;right:0;top:0;width:1px;height:23px;background:#a3a5a8}
