[백승종] 시스템 이동 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -238,7 +238,7 @@ body {
 
 /* Header */
 .head_top{position:relative; height:44px; background:#ffffff}
-.head_top a.logo{display:block;position:absolute;left:48px;top:5px;width:162px;height:28px}
+.head_top a.logo{display:block;position:absolute;left:48px;top:10px;width:162px;height:28px}
 
 .sysbtnbox{position:absolute;top:12px;right:19px;height:20px;}
 .sysbtnbox .bis{display:inline-block;width:88px;height:23px;padding:0;margin:0;border:0;color:#fff;line-height:23px;background:#3879d9;border-radius:13px;-moz-border-radius:13px;vertical-align:middle}
@@ -270,8 +270,8 @@ body {
 .head_box .nav > li .submenu > li > .depth3 > li > a:hover{background:#f7f8fb}
 
 .sysbox{display:block;position:absolute;left:48px;top:5px;width:162px;height:28px}
-.sysbox .info_tit{display:inline-block;padding:4px 5px 4px 0;margin:0;color:#9ea1a4;font-size:20px;line-height:15px;vertical-align:middle}
-.sysbox .info_tit.system_tit{color:#ff8000;padding-right:5px;}
+.sysbox .info_tit{display:inline-block;padding:10px 5px 4px 0;margin:0;color:#9ea1a4;font-size:20px;line-height:15px;vertical-align:middle}
+.sysbox .info_tit.system_tit{color:#f3f3f3;padding-right:5px;}
 
 .infobox{z-index:200;position:absolute;right:60px;top:12px;padding:0 20px 0 0;margin:0}/* right:191px */
 .infobox:before{content:'';position:absolute;right:0;top:0;width:1px;height:23px;background:#a3a5a8}
