[백승종] 서비스 로직 공통 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -270,6 +270,11 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_sh a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_search_ico.gif) no-repeat left top; display:inline-block;}
 .btn_save{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
 .btn_save a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+
+.btn_sh.search {background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.search a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_search_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.save{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.save a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
 .btn_tcm{position:relative;display:inline-block;padding:0 2px 0 0;margin-right:3px;background:url(/cm/images/contents/bg_btn_tcm.gif) no-repeat 100% 0;vertical-align:middle}
 .btn_tcm a{position:relative;display:inline-block;padding:4px 8px 3px 10px;height:15px;line-height:11px;color:#433130;background:url(/cm/images/contents/bg_btn_tcm_f.gif) no-repeat}
 .btn_ttm{position:relative;display:inline-block;padding:0 2px 0 0;margin-right:3px;background:url(/cm/images/contents/bg_btn_ttm.gif) no-repeat 100% 0;vertical-align:middle}
@@ -312,9 +317,6 @@ a:hover,a:active,a:focus{text-decoration:none}
 .dot_vertical {border-right: 1px dotted black; margin:0 5px}
 
 /* ### */
-.btn_fav{display:inline-block;width:14px;height:14px;margin-right:5px;background-image:url(/cm/images/inc/btn_fav.png);background-repeat:no-repeat;background-position:0 top}
-.btn_fav:hover{background-position:0 bottom}
-.fav_on{background-position:0 bottom}
 .ico_help{display:inline-block;width:14px;height:15px;background:url(/cm/images/inc/ico_help.png) no-repeat;}
 .ico_refresh{display:inline-block;width:14px;height:15px;background:url(/cm/images/inc/ico_refresh.png) no-repeat;}
 .ico_refresh_b{display:inline-block;width:14px;height:15px;background:url(/cm/images/inc/ico_refresh_b.png) no-repeat;}
