[백승종] 공통 버튼 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -275,6 +275,33 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_sh.search a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_search_ico.gif) no-repeat left top; display:inline-block;}
 .btn_sh.save{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
 .btn_sh.save a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.del{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.del a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.exli{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.exli a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.exl{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.exl a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.exlf{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.exlf a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.add{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.add a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.close{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.close a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.reserv{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.reserv a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.play{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.play a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.confirmyn{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.confirmyn a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.setting{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.setting a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.init{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.init a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.help{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.help a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+.btn_sh.clr{background:url(/cm/images/contents/bg_btn_search_repeat.gif) repeat-x right top;}
+.btn_sh.clr a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#fff; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
+
 .btn_tcm{position:relative;display:inline-block;padding:0 2px 0 0;margin-right:3px;background:url(/cm/images/contents/bg_btn_tcm.gif) no-repeat 100% 0;vertical-align:middle}
 .btn_tcm a{position:relative;display:inline-block;padding:4px 8px 3px 10px;height:15px;line-height:11px;color:#433130;background:url(/cm/images/contents/bg_btn_tcm_f.gif) no-repeat}
 .btn_ttm{position:relative;display:inline-block;padding:0 2px 0 0;margin-right:3px;background:url(/cm/images/contents/bg_btn_ttm.gif) no-repeat 100% 0;vertical-align:middle}
@@ -290,6 +317,37 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_gcm_arb2 a{display:inline-block;padding-right:12px;background:url(/cm/images/contents/bul_arrw_bottom.png) no-repeat right 8px}
 .btn_gcm{margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
 .btn_gcm a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.search {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.search a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.save {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.save a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.del {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.del a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.exli {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.exli a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.exl {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.exl a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.exlf {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.exlf a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.add {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.add a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.close {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.close a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.reserv {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.reserv a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.play {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.play a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.confirmyn {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.confirmyn a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.setting {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.setting a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.init {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.init a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.help {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.help a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+.btn_gcm.clr {margin-left:3px; background:url(/cm/images/contents/bg_btn_gcm_right.gif) repeat-x right top;}
+.btn_gcm.clr a{display:inline-block;padding:0 9px 0 11px;height:22px;line-height:20px;font-weight:bold;background:url(/cm/images/contents/bg_btn_gcm_left.gif) no-repeat left top; color:#fff;width:100%;box-sizing:border-box;}
+
 .btn_upload {margin-left:3px; background:url(/cm/images/contents/bg_btn_left_repeat.gif) left top repeat-x;}
 .btn_upload a {padding:0 20px 0 12px; display:inline-block; height:22px; line-height:20px; font-weight:bold; background:url(/cm/images/contents/bg_btn_right_up.gif) right top no-repeat; color:#fff;}
 .btn_download {margin-left:3px; background:url(/cm/images/contents/bg_btn_left_repeat.gif) left top repeat-x;}
