[백승종] 버튼 공통 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -66,10 +66,10 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 
 /* Search Box */
-.search_box{position:absolute;top:7px;right:29px;background:transparent;text-align:right;}
+/* .search_box{position:absolute;top:7px;right:29px;background:transparent;text-align:right;}
 .search_box .search_tit{display:none;margin-right:4px;padding-left:7px;color:#e0eaf3;background:url(/cm/images/inc/bul_arrow.gif) no-repeat 0 center;}
 .search_box > input{border:1px solid #1c2d5c; border-radius:5px; width:171px !important; background:url(/cm/images/contents/bg_search.png) 0 0 repeat-x;}
-.search_box .btn_all_search{position:absolute; top:0; right:5px; display:inline-block;width:22px;height:22px;vertical-align:middle;background:url(/cm/images/inc/btn_header_search.png) 0 5px no-repeat;}
+.search_box .btn_all_search{position:absolute; top:0; right:5px; display:inline-block;width:22px;height:22px;vertical-align:middle;background:url(/cm/images/inc/btn_header_search.png) 0 5px no-repeat;} */
 
 /*======================= content.css start ==========================*/
 /* w2inputCalendar */
@@ -161,6 +161,15 @@ a:hover,a:active,a:focus{text-decoration:none}
 .searchbox .sh_row .sh_column .sh_tt.pot{color:#5a89bc}
 .searchbox .sh_row .sh_column .sh_cont{float:left;position:relative;padding:0;margin:0;min-width:10px;min-height:10px;}
 .searchbox .sh_row .sh_btn{float:right;padding:0;margin:0}
+
+.gr_search{position:relative;padding:5px 5px;margin:0;border:1px solid #ced4d9; border-top:2px solid #757984; background:#f7f7f7; margin-bottom:10px; height:23px}
+.gr_search .btn_main_generator{position:absolute;right:2px}
+
+.gr_search .label{float:left; position:relative; margin-top: 4px; margin-right: 7px;}
+.gr_search .select{float:left; position:relative; margin-top: 1px; margin-right: 7px;}
+.gr_search .input{float:left; position:relative; margin-top: 1px; margin-right: 7px;}
+.gr_search .radioLabel{float:left; position:relative; margin-top: 4px; margin-left: 10px; margin-right: 7px;}
+.gr_search .radio{float:left; position:relative; margin-top: 3px; margin-right: 7px;}
 
 /* ### */
 .tbl_search{position:relative;padding:5px 5px;margin:0;border:1px solid #ced4d9; border-top:2px solid #757984; background:#f7f7f7; margin-bottom:10px;}
