--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -274,7 +274,7 @@ body {
 .sysbox .info_tit.system_tit{color:#f3f3f3;padding-right:5px;}
 
 .infobox{z-index:200;position:absolute;right:60px;top:12px;padding:0 20px 0 0;margin:0}/* right:191px */
-.infobox:before{content:'';position:absolute;right:0;top:0;width:1px;height:23px;background:#a3a5a8}
+/* .infobox:before{content:'';position:absolute;right:0;top:0;width:1px;height:23px;background:#a3a5a8} */
 .infobox .info_tit{display:inline-block;padding:4px 5px 4px 0;margin:0;color:#9ea1a4;font-size:14px;line-height:15px;vertical-align:middle}
 .infobox .info_tit.name_tit{color:#abe46d;padding-right:5px;}
 .infobox .info_tit.department_tit{color:#fff;padding-right:10px}
