[백승종] 레이아웃 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -135,7 +135,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .depthbox a:last-child{font-weight:bold}
 
 .defaultbox{width:100%;min-height:15px; position:relative;margin:0px 0 4px;overflow:hidden;}
-.defaultbox .df_tt{float:left; color:#333;padding:0 0 0 10px;margin-left:5px;font-size:14px;font-weight:600;line-height:15px;background:url(/cm/images/contents/bg_df_tt.gif) no-repeat 0 5px}
+.defaultbox .df_tt{float:left; color:#333;padding:0 0 0 10px;margin-top:4px;margin-left:5px;font-size:14px;font-weight:600;line-height:15px;background:url(/cm/images/contents/bg_df_tt.gif) no-repeat 0 5px}
 .defaultbox .df_total{display:inline-block;color:#3b3b3b;padding:2px 0 1px;font-size:12px;font-weight:600;line-height:15px;}
 .defaultbox .df_total.num{color:#e74c3c;padding:2px 6px 1px}
 .df_etc{margin:15px 0 4px;color:#bd5c10;padding:0 0 1px 20px;font-size:12px;line-height:16px;background:url(/cm/images/contents/bg_df_etc.gif) no-repeat 0 3px}
@@ -161,15 +161,6 @@ a:hover,a:active,a:focus{text-decoration:none}
 .searchbox .sh_row .sh_column .sh_tt.pot{color:#5a89bc}
 .searchbox .sh_row .sh_column .sh_cont{float:left;position:relative;padding:0;margin:0;min-width:10px;min-height:10px;}
 .searchbox .sh_row .sh_btn{float:right;padding:0;margin:0}
-
-.gr_search{position:relative;padding:5px 5px;margin:0;border:1px solid #ced4d9; border-top:2px solid #757984; background:#f7f7f7; margin-bottom:10px; height:23px}
-.gr_search .btn_main_generator{position:absolute;right:2px}
-
-.gr_search .label{float:left; position:relative; margin-top: 4px; margin-right: 7px;}
-.gr_search .select{float:left; position:relative; margin-top: 1px; margin-right: 7px;}
-.gr_search .input{float:left; position:relative; margin-top: 1px; margin-right: 7px;}
-.gr_search .radioLabel{float:left; position:relative; margin-top: 4px; margin-left: 10px; margin-right: 7px;}
-.gr_search .radio{float:left; position:relative; margin-top: 3px; margin-right: 7px;}
 
 /* ### */
 .tbl_search{position:relative;padding:5px 5px;margin:0;border:1px solid #ced4d9; border-top:2px solid #757984; background:#f7f7f7; margin-bottom:10px;}
@@ -199,7 +190,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tbl_search .tbl_sc input {height:22px !important;}
 
 /* table */
-.tb {width:100%; border-top:2px solid #757984;border-right:1px solid #b0b2b1; margin-bottom:10px;}
+.tb {width:100%; border-top:2px solid rgba(0,61,124,1);border-right:1px solid #b0b2b1; margin-bottom:10px;}
 .tb .w2tb_th,.tb .w2tb_td{height:19px;border:0;border-left:1px solid #b0b2b1;border-bottom:1px solid #b0b2b1;box-sizing:border-box;}
 .tb tbody .w2tb_th{line-height:19px;color:#3b3b3b;padding:3px 4px 6px 8px;background:#e3e6ea;text-align:left}
 .tb tbody .w2tb_th.tac{text-align:center}
@@ -231,14 +222,17 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 /* grid */
 .cm_gridbox{position:relative;padding:0;margin:0;}
-.cm_grid{border:none;border-top:2px solid #757984; margin-bottom:10px;}
+.cm_grid{border-top:2px solid rgba(0,61,124,1); border-left: 2px solid rgba(0,61,124,1); border-right: 2px solid rgba(0,61,124,1);
+		 border-bottom: 2px solid rgba(0,61,124,1); margin-bottom:2px solid rgba(0,61,124,1);}
+.cm_grid.first{height:560px;}
+.cm_grid.second{height:560px;}
 .cm_grid .gridHeaderTableDefault{border:0;border-right:1px solid #c8cad0;border-bottom:1px solid #c8cad0}
 .cm_grid thead.gridHeaderTableDefault{border:0}
 .cm_grid nobr{display:inline-block}
 .cm_grid th.gridHeaderTDDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b;background:#e3e6ea;height:25px;}
 .cm_grid tr:first-child th.gridHeaderTDDefault{border-top:0;height:25px;}
 .cm_grid .gridBodyDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b}
-.cm_grid .gridFooterTDDefault{background:#d6eaff;border-width:0 1px 1px 1px;}
+.cm_grid .gridFooterTDDefault{background:#d6eaff; border-width:0 0 0 0; }
 .cm_grid td.gridBodyDefault{height:25px;}
 .cm_grid button.w2inputCalendar_button {border:0; border-radius:0 !important;}
 .cm_grid .gridBodyDefault button{background: gainsboro; border-radius: 10px;  cursor: pointer;}
