[백승종] 파일 명 정리

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -123,7 +123,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 .ly_col_cont{display:block;position:relative;min-width:15px;min-height:15px}
 
-.pgtitlebox{position:relative;min-height:10px;padding:0;margin:20px 0 10px;overflow:hidden;}
+.pgtitlebox{position:relative;min-height:10px;padding:0;margin:10px 0 10px;overflow:hidden;}
 .pgtitlebox .wf_contNavi{float:right;line-height:16px;}
 .pgtitlebox .wf_contHeader{float:left;}
 .pgtitlebox .pg_tt{display:inline-block;color:#333;font-size:16px;font-weight:600;margin-right:6px;}
@@ -135,7 +135,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .depthbox a:last-child{font-weight:bold}
 
 .defaultbox{width:100%;min-height:15px; position:relative;margin:0px 0 4px;overflow:hidden;}
-.defaultbox .df_tt{float:left; color:#333;padding:0 0 0 10px;margin-top:4px;margin-left:5px;font-size:14px;font-weight:600;line-height:15px;background:url(/cm/images/contents/bg_df_tt.gif) no-repeat 0 5px}
+.defaultbox .df_tt{float:left; color:#333;padding:0 0 0 10px;margin:4px 0 2px 5px;font-size:14px;font-weight:600;line-height:15px;background:url(/cm/images/contents/bg_df_tt.gif) no-repeat 0 5px}
 .defaultbox .df_total{display:inline-block;color:#3b3b3b;padding:2px 0 1px;font-size:12px;font-weight:600;line-height:15px;}
 .defaultbox .df_total.num{color:#e74c3c;padding:2px 6px 1px}
 .df_etc{margin:15px 0 4px;color:#bd5c10;padding:0 0 1px 20px;font-size:12px;line-height:16px;background:url(/cm/images/contents/bg_df_etc.gif) no-repeat 0 3px}
@@ -224,8 +224,9 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_gridbox{position:relative;padding:0;margin:0;}
 .cm_grid{border-top:2px solid rgba(0,61,124,1); border-left: 2px solid rgba(0,61,124,1); border-right: 2px solid rgba(0,61,124,1);
 		 border-bottom: 2px solid rgba(0,61,124,1); margin-bottom:2px solid rgba(0,61,124,1);}
-.cm_grid.first{height:560px;}
-.cm_grid.second{height:560px;}
+.cm_grid.left{height:580px;} /* 왼쪽 그리드 높이 */
+.cm_grid.right{height:580px;} /* 오른쪽 그리드 높이 */
+
 .cm_grid .gridHeaderTableDefault{border:0;border-right:1px solid #c8cad0;border-bottom:1px solid #c8cad0}
 .cm_grid thead.gridHeaderTableDefault{border:0}
 .cm_grid nobr{display:inline-block}
