--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -5,8 +5,8 @@
 				/* box-shadow: 0 0 0 1px #000 inset; */
 				gap: 5px 0px;
 				}
-.pgm_navi { overflow:hidden; }
-.pgm_header { overflow:hidden; }
+.pgm_navi { overflow:hidden; height:40px }
+.pgm_header { overflow:hidden; height:40px }
 .pgm_content { gap: 0px 5px; }
 .pgm_list { gap: 5px 0px; }
 .pgm_detail { gap: 5px 0px; }
