--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -29,6 +29,8 @@
 .grdc_a_50 {display:grid; grid-template-columns:auto 50px;}
 
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
+
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 
 .grdc_1f_1f {display:grid; grid-template-columns:1fr 1fr;}
