--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -37,8 +37,9 @@
 .grdc_200_1f_1f {display:grid; grid-template-columns:200px 1fr 1fr;}
 .grdc_2f_1f {display:grid; grid-template-columns:2fr 1fr;}
 .grdc_1f_2f {display:grid; grid-template-columns:1fr 2fr;}
+.grdc_4f_20_6f {display:grid; grid-template-columns:4fr 20px 6fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
-.grdr_20_a {display:grid; grid-template-rows: minmax(20px, 100px) auto;}
+.grdr_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto;}
 .grdr_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) auto;}
 .grdr_20_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
 
