--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -57,6 +57,7 @@
 
 .grdr_20_300_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) auto;}
 
+.grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
 .grdr_30_a_30_150 {display:grid; grid-template-rows: 30px auto 30px 150px;}
 
 .grdr_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
@@ -65,7 +66,7 @@
 .required {font-color:red;}
 
 .vertical_line{box-shadow: 0 0 0 3px #757984 inset; height: 100%; width: 2px; margin-left: 10px;}
-.holizontal_line{box-shadow: 0 0 0 3px #757984 inset; height: 2px; width: 100%; margin-top: 10px;  margin-bottom: 10px;}
+.horizontal_line{box-shadow: 0 0 0 3px #757984 inset; height: 2px; width: 100%; margin-top: 10px;  margin-bottom: 10px;}
 
 /* 상단 검색창 */
 .gr_search{position:relative;padding:5px 5px;margin:0;border:1px solid #ced4d9; border-top:2px solid /* #757984 */rgba(0,61,124,1); background:#f7f7f7; margin-bottom:10px; height:23px}
