[강현우] 공지관리 페이지 그리드 분리

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -51,6 +51,7 @@
 .grdr_30_40_a {display:grid; grid-template-rows: 30px 40px auto;}
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
 .grdr_50_50_a {display:grid; grid-template-rows: 50px 50px auto;}
+.grdr_400_20_a {display:grid; grid-template-rows: 400px 20px auto;}
 .grdr_30_100_30_a {display:grid; grid-template-rows: 30px 100px 30px auto;}
 
 .grdr_20_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px minmax(20px, max-content) auto;}
@@ -62,6 +63,7 @@
 
 .grdr_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
+.grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
 .required {font-color:red;}
 
