[양현우] 노선 경로정보 관리 레이아웃

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -30,6 +30,7 @@
 
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_a_20_1700 {display:grid; grid-template-columns:auto 20px 1700px;}
 
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 
