[강현우] 음성관리 페이지 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -40,6 +40,8 @@
 .grdc_1f_2f {display:grid; grid-template-columns:1fr 2fr;}
 .grdc_4f_20_6f {display:grid; grid-template-columns:4fr 20px 6fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
+.grdc_400_20_a_20_400 {display:grid; grid-template-columns:400px 20px auto 20px 400px;}
+
 .grdr_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto;}
 .grdr_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) auto;}
 .grdr_20_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
