[양현우] 정류소 기초정보 관리 지도 추가 필요

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -68,6 +68,8 @@
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
+.grdr_20_a_20_20_a_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto 20px minmax(20px, max-content) auto 20px auto;}
+
 .required {font-color:red;}
 
 .vertical_line{box-shadow: 0 0 0 3px #757984 inset; height: 100%; width: 2px; margin-left: 10px;}
